--- a/_includes/commentbox.html
+++ b/_includes/commentbox.html
@@ -1,5 +1,8 @@
 {% if site.commentbox %}
 
+body {
+  background-color: #696969;
+}
     <div class="commentbox"></div>
     <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
     <script>commentBox('{{ site.commentbox }}')</script>
