--- a/_includes/commentbox.html
+++ b/_includes/commentbox.html
@@ -1,7 +1,7 @@
 {% if site.commentbox %}
-
+<body style="background-color:White;"></body>
     <div class="commentbox"></div>
-    <script src="commentBox.min.js"></script>
+    <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
     <script>commentBox('{{ site.commentbox }}')</script>
 
 {% endif %}
